# agrr

./: .cursorrules  .daemon-version-summary.md  .dockerignore  .editorconfig  .env.gcp  .gitattributes  .gitignore  .npmrc  .npmrc.bak  .rubocop.yml  .yardopts  AGENTS.md  ARCHITECTURE.md  ASSET_MANAGEMENT.md  Agent.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANARCHITECTURE.md  Cargo.toml  DAEMON_DEFAULT_SUMMARY.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  Dockerfile.agrr-server  Dockerfile.production  Dockerfile.test  Dockerfile.with-agrr-daemon  ENV_CONTROL_SUMMARY.md  GCP_DEPLOY_CHECKLIST.md  Gemfile  MASTER_MODELS.md  MIGRATION_DEPLOYMENT_GUIDE.md  QUICK_START_DAEMON.md  RAILS8_RESTORATION_PLAN.md  README.ja.md  README.md  RUN_TESTS.md  Rakefile  SETUP.md  TEST_GUIDE.md  apprunner.yaml  (+29 more)
crates/agrr-adapters-agrr/: Cargo.toml
crates/agrr-adapters-agrr/src/: agrr_daemon_debug_dump.rs  crop_ai_query_daemon_gateway.rs  daemon_ai_query.rs  daemon_client.rs  daemon_response.rs  daemon_temp_file.rs  entry_schedule_optimization_gateway.rs  fertilize_ai_query_daemon_gateway.rs  fertilize_plan_daemon_gateway.rs  field_cultivation_climate_gateway.rs  lib.rs  pest_ai_query_daemon_gateway.rs  plan_allocation_adjust_gateway.rs  plan_allocation_allocate_gateway.rs  plan_allocation_candidates_gateway.rs  prediction_daemon_gateway.rs  progress_daemon_normalize.rs  schedule_daemon_gateway.rs  task_schedule_progress_gateway.rs  weather_daemon_gateway.rs
crates/agrr-adapters-agrr/tests/: field_cultivation_climate_gateway_test.rs  plan_allocation_allocate_gateway_test.rs  task_schedule_progress_gateway_test.rs
crates/agrr-adapters-gcs/: Cargo.toml
crates/agrr-adapters-gcs/src/: gcs_io_counters.rs  gcs_object_client.rs  gcs_read_log.rs  lib.rs  predicted_weather_store_gateway.rs  weather_data_gcs_gateway.rs  weather_json.rs  work_record_photo_store_gateway.rs
crates/agrr-adapters-sqlite/: Cargo.toml
crates/agrr-adapters-sqlite/src/: lib.rs  pool.rs  soft_delete.rs
crates/agrr-adapters-sqlite/src/agricultural_task/: ag_task_crop_gateway.rs  agricultural_task_gateway.rs  crop_task_template_gateway.rs  mod.rs
crates/agrr-adapters-sqlite/src/api_keys/: mod.rs  user_api_key_rotation_gateway.rs
crates/agrr-adapters-sqlite/src/auth/: auth_test_login.rs  mod.rs  omniauth_session.rs  session_lookup.rs  session_revocation.rs
crates/agrr-adapters-sqlite/src/backdoor/: application_database_clear_gateway.rs  backdoor_diagnostics_gateway.rs  mod.rs  shell_stdout_capture.rs
crates/agrr-adapters-sqlite/src/contact_messages/: contact_message_gateway.rs  mod.rs
crates/agrr-adapters-sqlite/src/crop/: agrr_requirement.rs  crop_agrr_requirement_gateway.rs  crop_ai_upsert_sqlite_persistence.rs  crop_gateway.rs  crop_gateway_test.rs  crop_masters_task_schedule_blueprint_gateway.rs  crop_masters_task_template_gateway.rs  crop_setup_proposal_sqlite.rs  crop_stage_gateway.rs  crop_task_schedule_blueprint_sqlite.rs  mod.rs  requirement_gateways.rs  source_crop_lookup_gateway.rs
crates/agrr-adapters-sqlite/src/cultivation_plan/: crop_rows_available_private_gateway.rs  crop_rows_available_private_gateway_test.rs  cultivation_plan_gateway.rs  cultivation_plan_optimization_sqlite_gateway.rs  field_mutation_gateway.rs  mod.rs  optimization_plan_read_gateway.rs  plan_allocation_adjust_debug_dump_file_gateway.rs  plan_allocation_adjust_read_gateway.rs  plan_crop_gateway.rs  plan_save_gateways.rs  plan_save_integration_fixture.rs  plan_save_persistence.rs  plan_save_plan_copy.rs  plan_save_session.rs  plan_save_session_integration_test.rs  plan_save_support.rs  planning_horizon.rs  private_read_gateway.rs  private_read_gateway_test.rs  private_snapshot_read_gateway.rs  public_plan_save_read_gateway.rs  public_plan_save_read_gateway_test.rs  public_plan_save_read_gateway_test_fixture.rs  public_plan_save_read_sql.rs  public_plan_save_reference_snapshot_sqlite.rs  rest_plan_read.rs  rest_plan_read_domain_gateway.rs  task_schedule_gateway.rs  task_schedule_generation_integration_test.rs  task_schedule_generation_read_gateway.rs  task_schedule_generation_transaction_gateway.rs  task_schedule_item_mutation_gateway.rs  task_schedule_sync_state_gateway.rs  task_schedule_timeline_read.rs
crates/agrr-adapters-sqlite/src/deletion_undo/: cultivation_plan_snapshot_integration_test.rs  deletion_undo_gateway.rs  deletion_undo_gateway_integration_test.rs  (+5 more)
crates/agrr-domain/: Cargo.toml
crates/agrr-domain/src/: lib.rs
crates/agrr-migrate/: Cargo.toml
crates/agrr-migrate/manifest/: legacy_versions.yaml
crates/agrr-migrate/src/: config.rs  lib.rs  main.rs  manifest.rs  schema.rs  stamp.rs  weather.rs
crates/agrr-migrate/tests/: data_base_jp_test.rs  data_idempotency_test.rs  data_reference_in_test.rs  data_repair_india_crops_test.rs  data_repair_india_farms_test.rs  data_repair_us_crops_test.rs  data_tasks_jp_test.rs  data_templates_jp_test.rs  manifest_test.rs  migration_parity_test.rs  schema_smoke.rs  support.rs  weather_stream_test.rs
crates/agrr-r4-contract/: Cargo.toml
crates/agrr-r4-contract/src/: http.rs  lib.rs
crates/agrr-r4-contract/tests/: contracts.rs  support.rs
crates/agrr-server/: Cargo.toml
crates/agrr-server/src/: adapters.rs  add_crop_support.rs  adjust_weather_prediction.rs  ai_api.rs  api_keys.rs  auth.rs  auth_api.rs  auth_return_to.rs  auth_test.rs  builtin_generation_deprecation.rs  cable.rs  composition.rs  contact_messages.rs  cultivation_plan_optimize.rs  cultivation_plan_weather_load.rs  cultivation_plans.rs  cultivation_plans_mutations.rs  deletion_undo.rs  entry_schedule.rs  fallback.rs  farm_weather_fetch.rs  farm_weather_fetch_locks.rs  fertilize_ai_adapters.rs  field_cultivation_climate.rs  field_cultivations.rs  internal_farms.rs  jobs.rs  lib.rs  locale_catalog.rs  locale_translator.rs  main.rs  masters_agricultural_tasks.rs  masters_auth.rs  masters_crop_agricultural_tasks.rs  masters_crop_context.rs  masters_crop_pesticides.rs  masters_crop_pests.rs  masters_crop_requirements.rs  masters_crop_setup_proposal.rs  masters_crop_stages.rs  (+39 more)
crates/agrr-server/tests/: contract_health.rs
(+8460 files in other folders)
