[workspace]
resolver = "2"
members = [
    "crates/agrr-domain",
    "crates/agrr-adapters-sqlite",
    "crates/agrr-adapters-gcs",
    "crates/agrr-adapters-agrr",
    "crates/agrr-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust_decimal = "1"
time = { version = "0.3", features = ["serde", "macros"] }
