[package]
name = "agrr-adapters-agrr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "agrr Python daemon/CLI client (P6)"

[dependencies]
agrr-domain = { path = "../agrr-domain" }
serde = { workspace = true }
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true
time = { workspace = true, features = ["formatting"] }
tokio = { version = "1", features = ["io-util", "net", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"
