[package]
name = "agrr-adapters-gcs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GCS weather JSON adapters (P6)"

[dependencies]
agrr-domain = { path = "../agrr-domain" }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["parsing", "formatting"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["fs", "rt"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
mockito = "1.6"
