[package]
name = "agrr-adapters-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite gateway implementations for agrr-domain traits (P6)"

[dependencies]
agrr-domain = { path = "../agrr-domain" }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rust_decimal.workspace = true
time = { workspace = true, features = ["parsing", "formatting"] }
getrandom = "0.2"

[dev-dependencies]
agrr-adapters-gcs = { path = "../agrr-adapters-gcs" }
tempfile = "3"
time = { workspace = true }
