[package]
name = "agrr-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGRR schema (refinery) and reference data CLI (P7)"

[[bin]]
name = "agrr-migrate"
path = "src/main.rs"

[dependencies]
tempfile = "3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
