[package]
name = "agrr-r4-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "R4 HTTP contract tests against co-located agrr-server (P8.6)"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "cookies"] }
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
