[package]
name = "agrr-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AGRR Rust HTTP edge (P6 strangler)"

[lib]
name = "agrr_server"
path = "src/lib.rs"

[[bin]]
name = "agrr-server"
path = "src/main.rs"

[[bin]]
name = "optimization-chain-spike"
path = "src/bin/optimization_chain_spike.rs"

[[bin]]
name = "optimization-chain-run"
path = "src/bin/optimization_chain_run.rs"

[dependencies]
agrr-domain = { path = "../agrr-domain" }
agrr-adapters-sqlite = { path = "../agrr-adapters-sqlite" }
agrr-adapters-gcs = { path = "../agrr-adapters-gcs" }
agrr-adapters-agrr = { path = "../agrr-adapters-agrr" }
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
oauth2 = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json.workspace = true
serde_yaml = "0.9"
rust_decimal = { version = "1", features = ["serde"] }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
base64 = "0.22"
tempfile = "3"
